src/app/questions/questions.component.css
.tno {
    background-color: #fff;
    height: 120px;
    width: 120px;
    border-radius: 50%;
    -moz-border-radius: 50%;
    -o-border-radius: 50%;
    -ms-border-radius: 50%;
    position: relative;
    display: inline-block;
    top: 50px;
    left: 25px;
    border: 10px solid #f0f0f0;
}
.tno i {
    color: #ff695b;
    font-size: 60px;
    padding: 25px 20px;
}

.tyes {
    background-color: #fff;
    height: 120px;
    width: 120px;
    border-radius: 50%;
    -moz-border-radius: 50%;
    -o-border-radius: 50%;
    -ms-border-radius: 50%;
    position: relative;
    display: inline-block;
    top: 48px;
    left: 0px;
    border: 10px solid #f0f0f0;
}
.tyes i {
    color: #5de19c;
    font-size: 60px;
    padding: 25px 20px;
}

